--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.3",
     "next": "15.3.0",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
